--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Hola!</h1>
+    <h1 id="title">Hola!</h1>
     <h2>Escribamos un poco de código el día de hoy!</h2>
   </header>
 
@@ -42,7 +42,7 @@
       <p>Muchas gracias a MusesCodeJS que es la inspiración para este taller.</p>
     </div>
     <div>
-      <ul>
+      <ul class="myLi">
         <li class="twitter">
           <span>Twitter:</span>
           <a href="https://twitter.com/MusesCodeJSSyd" target="_blank" rel="noopener noreferrer">@MusesCodeJSSyd</a>
