--- a/tareas/clase-6/index.html
+++ b/tareas/clase-6/index.html
@@ -10,12 +10,12 @@
     <body>
     <form id="calculador-edades">
         
-        <label>Cantidad de integrantes</label>    
+        <label for="cantidad-integrantes">Cantidad de integrantes</label>    
         <input type="number" id="cantidad-integrantes">
         <button type="submit"id="siguiente-paso">Siguiente</button>
 
         <div id="integrantes">
-
+            
         </div>
 
         <button type="button" id="calcular" class="oculto">Calcular edades</button>
