--- a/tareas/clase-5/index.html
+++ b/tareas/clase-5/index.html
@@ -8,6 +8,13 @@
     <title>Clase 5</title>
 </head>
 <body>
-
+    <form>
+        <label for="salario-anual">Ingrese el salario anual</label>
+        <input type="number" id="salario-anual" placeholder="Ej: 250000"> <br>
+        <label for="salario-mensual">Salario mensual</label>
+        <input type="number" disabled id="salario-mensual" >
+        <button type="button" id="calcular-salario-mensual">Calcular</button>
+    </form>
+    <script src="tarea-clase-5.js"></script>
 </body>
 </html>
