--- a/tareas/clase-6/index.html
+++ b/tareas/clase-6/index.html
@@ -8,7 +8,7 @@
     <title>Clase 6</title>
 </head>
     <body>
-    <form id="calculador-edades">
+    <form id="calculador-edades" name="formulario">
         
         <label for="cantidad-integrantes">Cantidad de integrantes</label>    
         <input type="number" id="cantidad-integrantes">
