--- a/tareas/clase-6/index.html
+++ b/tareas/clase-6/index.html
@@ -32,6 +32,7 @@
 
 
     <script type="text/javascript" src="tarea-clase-6.js"></script>
+    <script src="pruebas.js"></script>
 
     </body>
 </html>
